# serde_netcdf

./: .gitignore  Cargo.toml  LICENSE
src/: de.rs  error.rs  lib.rs
