[package]
name = "serde_netcdf"
version = "0.1.0"
edition = "2021"
description = "NetCDF serializer/deserializer for Rust"
locense = "MIT"
authors = ["Thomas Alcala <thomas.alcala@waltr.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
