[package]
name = "serde_netcdf"
version = "0.1.0"
edition = "2021"
description = "NetCDF serializer/deserializer for Rust"
license = "MIT"
authors = ["Thomas Alcala <thomas.alcala@waltr.fr>"]
repository = "https://github.com/thomasmarcel/serde_netcdf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netcdf = { version = "0.7.0", features = ["ndarray", "memory", "static"] }
serde = { version = "1.0.152", features = ["derive"] }
